# ChangeLog for dev-python/ndg-httpsclient
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/ndg-httpsclient/ChangeLog,v 1.14 2014/08/25 17:29:21 mrueg Exp $

  25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
  Mark amd64 stable. Bug #513278.

  18 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
  ndg-httpsclient-0.3.2.ebuild:
  Keyword ~ppc ~ppc64, bug #509628

  02 Aug 2014; Raúl Porcel <armin76@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
  alpha/ia64/sparc stable wrt #513278

  31 Jul 2014; Christoph Junghans <ottxor@gentoo.org>
  ndg-httpsclient-0.3.2.ebuild:
  added ~amd64-linux (tested by me)

  31 Jul 2014; Christoph Junghans <ottxor@gentoo.org>
  ndg-httpsclient-0.3.2.ebuild:
  added ~x86-macos (tested by me)

  29 Jul 2014; Anthony G. Basile <blueness@gentoo.org>
  ndg-httpsclient-0.3.2.ebuild:
  Keyword ~mips

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  ndg-httpsclient-0.3.2.ebuild:
  Keyworded on alpha, bug #509628

  19 Jun 2014; Markus Meier <maekke@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
  arm stable, bug #513278

  15 Jun 2014; Jeroen Roovers <jer@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
  Stable for HPPA (bug #513278).

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
  keyword ~ia64 wrt bug #509628

  15 May 2014; Markus Meier <maekke@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
  add ~arm, bug #509628

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
  Add support for the new PyPy slotting.

  11 Aug 2013; Jeroen Roovers <jer@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
  Marked ~hppa too.

*ndg-httpsclient-0.3.2 (09 Aug 2013)

  09 Aug 2013; Mike Gilbert <floppym@gentoo.org> +metadata.xml,
  +ndg-httpsclient-0.3.2.ebuild:
  New ebuild.