@@ -1,4 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ndg_httpsclient-0.3.2.tar.gz 21514 SHA256 cc806d43f3e79be40f923d94f542f23a94c6ddbb9a63258b0bf875f325508973 SHA512 0060d1b0f749cc3017f4d5550bf0e7242e035f5f84a914a23219a85ba0dd9185e6edf88c38db16df8dfe05beb267262cc2fed00758c0b4d8b2ee222abe2d642e WHIRLPOOL a7d058939909b5b9ffc8c4f9432d97f4cbb76824b34cc5bf9fd0d32edcf2cee77daad34ad48ad8927c2a3c2a30c960cdc5568131706d15089749f3037b66607d
-EBUILD ndg-httpsclient-0.3.2.ebuild 824 SHA256 f23adc40f71bb7187ca2eadda2d8731b54d2bdd891d0b7e0361b7ec1da164c8e SHA512 a2033ea11531bad44c516ae4defdc350eb7c6fdd77305995c1765c08bc03decbc78c15189ecfa2528df0fcc8bb0cd1e232a35a70c20f8e492b8c38ebe9e4af77 WHIRLPOOL 2a669194625e156979e25e51c3bb6bad9847a82c8090b00d4ed56cb89594831dad202d836ae66fdf00c2ce25d174d9989fa12d3ddc378cbbea01b2298f097ee3
-MISC ChangeLog 1850 SHA256 7e7e699715ff25a3ce0b30f7fb9d284a7b962f77b143ec3e77252103c9f43bac SHA512 184c0b02a203906eb2fc5b56c67f08b605d0c36b712c971cc061aaf123d239a7dacba0988c91bb160f601da925a9b38dbaab8bf52fb35cee63f3c6a65ef4e0f4 WHIRLPOOL 532a8172bb9672c1903d96db1184f088fe0684dec6cd29d6960493285cdbc7d8ccfa33aadcd754467ac32f109f86354c9927449a57871639284f92ad75f5cdfd
+EBUILD ndg-httpsclient-0.3.2.ebuild 834 SHA256 dcdc7ba67ea54271a26c5bd3c6b5a722fa86a7ae89b65176e5c86cf1d31f7ce7 SHA512 88e3220062e5154a9276456ee65f137e9856874198c1d8aa7c7d92aeb199d54633a99867cb9c36fafc96e4198971a2dab14428aac1206b98b5a83bfc01970a9f WHIRLPOOL e6a6ba8f85aa78d53e958be18e2abb72b28ff9c7972ad71faadf38acec53f59220b441b12b9b26717054d925bea5e5bb1c8852523fc3740668958342fc457063
+MISC ChangeLog 1953 SHA256 8a9a5cf13c2284207c7d3c649afa73ddee56b11acb1c7255672ee0739a831736 SHA512 235bc3cee25a60bf8cbc82e8dd49e61fb719c646360c060fca05a3a801b4e3bc83d999f0d1402c199d3be54b92b7cc5c6103de5f0dea7544e0fe16fad8766c3b WHIRLPOOL f72c18e6142eff6fced9c9b7109ab458bfbb07dddea5f3266310005297bce591214757e88675b2b5e0355c591d590f57207883de3ae2c71b3114c0c9b3ae40e6
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJT/ueYAAoJEDYO1FT4VRUU5tcP/2ken/RrQWq6q27d+JSMMuw8
+3cC27yorDL8vtalWVB3blPrEiAD0hf+5Y0BNTexcEin3tp/DcsclQy1C+tjHYJKw
+XJ5H22/Cua4XQDVEbJdLJR4MPOs1I0PHPljYQ7BtHQ9vYQOVC3plD7308nVvYXzU
+LSGFUJnTPI0qzOcTQte6hJPdNNxHIqjKa31LB1Shk+lHGX1wlBlFtADPTi205hmy
+GgGVBmIpoR3/s17FHDAFb5Y8mj+BWIZSaN05n8gNwbxA7zKL6OyK5e9cDHmHHUS5
+piFxaVDTGBeYe5LgzkDDKg0rQjGr1T7PgCJjEGCcqD9A5okwJmeQDBOMHyMAvc5t
+1Bm8PjNtD2pVsnbyDPRnpKUQNNgnEzJ4QzyvW03hhRoJTlaASazTAOIr5Q3OmsoM
+fkgSRsqU0S3R5mlsf/PeOctxBd6yFNuw7emcNt4NqD4cXxfB56nIRU75QYqUF0hZ
+Kv6o764M8SKo7kCVV2wuyiEvc3lPvpeDY4Xn5opz5C+ryyl01XONJ8qPk3fLnhb3
+lrTXzCNArLMj8Am9DdooYl7Ob6mHTe9lZ7n2an01GslXqdqKf+l4q/PQEYMYRMJb
+pH1FvQ+bqmyY4nNqDI0STBbfsWj2GApJsdmjwJdLeLoG6am6qn74HxO1DagCOlva
+g/LyzWxRH9rqgf2Kj+fB
+=lu1G
+-----END PGP SIGNATURE-----
