@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX requests-0.12.1-setup.py.patch 1112 SHA256 2d7ce770c980b21f6e19f50916fb046ba4c30d51df8e39d67de8690b3f0c36a7 SHA512 48025d13611208736d0b24e96e37b5424bfe41366fa3e12b4b1444395918c2ae5e9106e58da93fd4d3fcb9c1916940d9ddb8858ee242dbf71e4ba28c55bdb43a WHIRLPOOL 189e5a6e3ca178bc41ea1a543295b422c4162cc2a211d7c2b7ebc56fe88da149225cab293aecea05cd1d8cd7d4d3f400d822b3d61560734a1576ec6806f59b25
 AUX requests-0.13-python2.6.patch 1765 SHA256 eef2282997f16309d8be932e2a5c6c65c5c00edc54c8f65d39047fb5ff849af8 SHA512 1ce57f185959d6105800fded764c61b644c7c7d31e2aec2a285906b6c8f889d9b343b6bb5b858d6741b4f8ef22b9f9179f7d34c822ef3c621100ffc2bb25a6a9 WHIRLPOOL 3bb75aa333c0638cb79c4b84652a443b6f69f12b7bb2992483e82e0654e47eb4dca2a8a8753c9beb7837ad8c2c1e4e4300934049d1a48bde12215a6421cff924
 AUX requests-0.14.1-system-cacerts.patch 292 SHA256 b9b20d281b64bb3d70e1d1054c851bc5701fe220ca8cf6b896b709b1f229b68d SHA512 af4ba044bdb7d453eae395b045a9e154d6022dcce92ec7381d2873c343aa90494be115b18e0e5bb4d4cbf5338c60d68cfc739fdce759cf9661a9585be410243d WHIRLPOOL 0144d697d4baace9e38668a416f21fc003b96d939affc6100013f2fd12c37dda316d7b7e7ad676b5ae054787ea9d1c48af175e4015ee3113be3f405739fc0db5
@@ -28,6 +31,23 @@ EBUILD requests-2.0.1.ebuild 1189 SHA256 6196c8ee28925e4aa511885f7eb04c48ee8ce48
 EBUILD requests-2.1.0.ebuild 1195 SHA256 406b6d3890053725cca300e3c293d848e8c5bf864b373f812aeedc2de3dea060 SHA512 560b7f2e9f9774ee3522e1e793b570ee683269e3a8304591d3120039e72a7d6ada39310ce6ee49b9f41776f9926c6ca3d83aaa1b67ed410e18dd948415ff70de WHIRLPOOL 184ae13466c88872563d7382d8a674f094b203424ddb824378f41ec15a021373e61711d4d07686f0494c09f73e5af7115cc42fa3b8114e791cda8202f01498d2
 EBUILD requests-2.2.0.ebuild 1165 SHA256 b6e4b18b67b979e7879f1fac8f6e340ac3a03c3e66745ec7d6acaf13215af2bf SHA512 1c98d24b556fe5a54ef3f98a73a26e8b20ad011614728c09e83226ebdef5c1e4c66ebee70bce7123fc3820fb84c2f69730c30b2546360e37a8d0898ea03fbfd4 WHIRLPOOL 4f74a90897065fcbe410da8c3547654620f8dc4f8c9b9196aa279e11f02574ff26c1f65aa12fff7069216ed8b90cada86f0d7a21e5b27303d9b89d93ec9e1516
 EBUILD requests-2.2.1.ebuild 1200 SHA256 29df7c125048e0b3b1177cdf67ba8aee6a7cc4f690a44f2831a9066ad5007db2 SHA512 b10ad57499b6bc6283159c9175760d3e97e5e40f3e1c9eb068b10bb548355841312f108220350e64e35bb93af9f0091b83c42432d38ec3bf933bc70b9fa3ae4d WHIRLPOOL 54fc103f72601c7c8c46ecdd27c17e26d65975e2def86635b3197cd3f4ef4096d92fda520e6d14ea128b9e3805887b01f90ebd1e5e3f789abf54d896729b2053
-EBUILD requests-2.3.0.ebuild 1216 SHA256 b57c1729feeb6b08828668cdb990a3fa0956da0e0d47ae484b43673bfa1261a8 SHA512 30535a13929a8f295b285d8b45b2c012083d662dbaf9c2e0ffc486e796e9c4af63f7d87bec24df406052164d53116093d262b2cacd6eb6833d72a497e754c362 WHIRLPOOL f8683d505854de3ab15c307a89cf925ad544b9a48e9d2db7429aca4710fdae5cc115514aa77986d7732fd3dd85bd66e884a5b78bd3f6bea403c2dfe0287ed8c0
-MISC ChangeLog 10637 SHA256 d664be3ec4a4e4f4316fb06c8559ebad6df6acf3a6d91023150c7b432e523447 SHA512 b6c35f36a1f9b5f55ad5f637029bb38624df277d78c360e713f295da8c12f59e2f1f3aed19333d5729d89336108e82b1b185f489a2e4e532a507f77aa866bfdc WHIRLPOOL 6cab95593d764ddf1526b1669c4e4effb53b63881ce72d3234941d7700f7571785425bd63f21736ae48ae1f5e026f41fb86221152cc6920ae5f41513062112ea
+EBUILD requests-2.3.0.ebuild 1226 SHA256 1a4817af9901b5efaaa65673b33fc058ae36b3bbe7599756f73c0fbd992270ec SHA512 b9c357f892d6c7ac8c5791bda677b51afdc6e4de9d4340fa491257ca0ead0cb173901d7b2b433846c13ee5eb328935d7163818e0102974a128f05ff800132f55 WHIRLPOOL ce51708b5d1ab00baf343c61008e4f8f25e43d1e5356b450d71312b7cb94295d3cde6676607bf2bc566af6df372544da44b2fb8f661bb24f31793fdcc77fd5c0
+MISC ChangeLog 10733 SHA256 0335470fc6b68f8e21fc80afd7e35be7b6f8ca894d1be76e2a09656c4050b01e SHA512 3de3566fcba68782888b5217884ff769f6c81b48e65afd68011847922eae915ed7cfd69ba5b3bd2b70887f718e3bd1de7dae0d236b35a1ca4bdba85da7387ad0 WHIRLPOOL 1eb323158558a9eb132d11608b660bd7beaeaed6c50ec6972a62392e21e17476dfaf27835017cf8333d407f7b2e5ff9f0e61fa57497afffeac94b8f08b49c4ed
 MISC metadata.xml 231 SHA256 7bbca8901dd0afb4da18f659567071156f1efea52100213d20d43e53721a0ff9 SHA512 dce3df6bc1c4fc9517e39c41e0c904f39fd092cd63024f03ee5c15aef5b4840dfb265ebe565a5e5a8da9a8805d58b3ec3f772429bf00b125c3172f2f79e089bb WHIRLPOOL 2f6573a3f74f88a549a3344deeea5cdd4f27a310b59d466684902f009c7b404c0557f26f416b450f1f7bdce133c3d52897c5169fce01707233630ddfa783d9c6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJT/uh9AAoJEDYO1FT4VRUU/UEQAILydT8z1xshfJGU8fvSftBQ
+Hkya7n7Fpl2fzD5+LWWP2qwC3ydXQ7TNnxTeYj4A4X5q96aJOFV/fK3WQJnMzIFN
+m4X487JYZsy7ZqE7rLyOtlH0fnk9sN937XnsXtxOsM57QBQ8qbux+a0sZ7I8O6us
+r7E6UOeJ6CvqpllzpzBPAZwGgbA/LryDDvIs+7oBMtntKYJabV5NCPqQhPDs28MK
+4a2ZLsrTj53+LSKxTLtP//myizKiSQ2reZYeuvurTQ2wM8LS4yqMwqG2j4MSwvmT
+C+32vDq8g1cdtvLIehc8TErmQ7nVpuNgjb71eRWljogCMfZy8+/NfGr2OBqLX+3e
+A/fhPb8fATBrV1CGD/970JYSuMbKxLafjQt8DgJEjwNPEd3aaDdGbjDmMkNOHu7q
+fU6JQ63w+qPaX0pe2nfS0s7ZsH5gMHcREykbqJg1f79XAcuXcfQcWSsy3lrJJFc2
+XH+1ZzOif7ict5O95bnHvzDbsRLB6T62bR6wRy+KWWq9CQqYxwPTatvExB4FfsYj
+xAj1UKRo2Xhihqgx6DDEqWvj8O92t0y4gYdQhUFCXaMyGNfyGR2aKkqGbf68ew2W
+KRkNSzd5E6MQrT2qvvOTGLaYaJwC0o7Kn90kROa3XKI7RaYOkrwkb4Sttligyw8G
+ONYh1tKqXsX2vW9xPsnN
+=wl8P
+-----END PGP SIGNATURE-----
