@@ -1,7 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ssl-fetch-0.2.1.tar.gz 10703 SHA256 2905a8301477cf309484e3beef892d68b33910db71be45c08720f70791690b9d SHA512 ca4c4d29463d5761fbcea151f1229152bd0092418254ce614154b012af9a23c0c52bb733f64815499b5ae0ae9325a808ae2157e7ff707345e92352b672c98966 WHIRLPOOL 4bea8540fce0a2bcc0f8d55b4d87e7c544321b14967af95ded400f4ae0af3fd14c8390ed808352aa89c6ba7d267536d2ef8956dcba4b871226e2be9d4e71a2f8
 DIST ssl-fetch-0.2.tar.gz 10945 SHA256 027f63c5797e0fd84d4ed2195e42141316cceeed0b91058dd700b55482e40a78 SHA512 30aa040503eb05d8b0a7775ce843215ebbc198483fba2133e78a5da57f8b998c65018a1241f4f7bb3fbf66045c45bf050b59adb94a68c694aa3aeb6c0b5f726f WHIRLPOOL b4442b55d98741906eb1f3c0fda80cfbb0be42d2d8491c6bf1b86c0833a021ccfbae2887d2f833e9a297556d25c49cb4d617743a338e02299061f6e281d3563c
 EBUILD ssl-fetch-0.2.1.ebuild 1293 SHA256 1db65584c45fb354bba4944906e7caaa3be1ff82d073ec292d9655f7bc2be226 SHA512 537a7ce041f98deca12b37e4297e5eabd9d736e4f459e06eab4699acaa8db7121e73fa79251d49e91da5c489a9e45508a51847b30dbae007738b9a87783fecb0 WHIRLPOOL 49a44ecf42d7fcad9dcc8543ed6ba10c88288e50eac8076dd00df03686f6c08109d16e14a27b118c46de3885c31cb9791d15a6ff64a67071322f9b8664259e89
-EBUILD ssl-fetch-0.2.ebuild 1251 SHA256 b333bf2136d3fa8330173bdcde36655957a7234cfe04d554269d0c911dea190d SHA512 40bb7175405fe5dc75ac4fc315991020f1ee9de792fe28f1eaa0d029713e123ed8d4fee4017891ddc07b95587e4a73834f00ab2f0746799cd449d41a586bb97c WHIRLPOOL d39575dd9f99524cd448f6d766275325262d269a689673ddd156ff1e4491c3352f02f9585fe7ea76aa30adf9e920abd6273e226f85abd91bd255147489a164bb
+EBUILD ssl-fetch-0.2.ebuild 1261 SHA256 468bea4004c7cfb6dc9852ab90e910b093ac921ce98e9dd22295b8399b95705b SHA512 0fd600240c0e5b394ddcb9bdbffe45a412b8286b9a460337bf2829267a99bc4ad173ef29184eb23e889c2c22c27e25ea2a258c444095a5d83119d724eb077554 WHIRLPOOL 2d946bf471ca71a6afbb2045625e604a425ac2e1ca36c53db1cc34ff944f54330275240258377846b91a8f3aee234164600174487481dceef74d793829679761
 EBUILD ssl-fetch-9999.ebuild 1204 SHA256 d655bd273d8c51523d905f6b7081ab3ccf2b9e3fa5d2832aacbe11687934c48a SHA512 a8cbc276d8c508e5a597b8a5b7f0d4bfb0f7e9d5ec2ec67e64e0406f905c363d361f55bb4b8c997dd033b4ad08f8587473cc7badc88a35b4fa3d1e58a72268c7 WHIRLPOOL b84a2f125943d19e54fef7041afde66bc26ec5f8548a3b385189e2237e125fb47d0e0d5134aaa86f53660353d862a04463a74433df41b7ae5ae8332047c81b19
-MISC ChangeLog 2775 SHA256 3fcf6f784cd048f060ad3e35426967a1f5b233f029738e0fe7f858c105131b6b SHA512 5945ece8a7adbfe9e260b5eb5f48f19191a2d0038bd5aad5cf37e27bdd5f17bff6be8759a6fcec06a948432e7a7685ca5bb3759cc29fb2935e9e09c47349e219 WHIRLPOOL ce445d5c5e2cae22dd9d3cb534b7e09ada2ddfca78eaacf7e5a2a83faf4341a0c339fe31978c735b011fc0819fd2c5a508bd5ef41f0a18a40cca0ffb37e2ff85
+MISC ChangeLog 2870 SHA256 7bb40fdb629feac77d2bc027e9c40ae4a32bf4f262f002eddc2b66ee544d161a SHA512 e6c7348e584522532cc0bb4d94417f493229f278e0022631a9a3fa91514f80c09f6cd7b3a641f2354ea42618d65037732a0443165a4f6fcfa64793ee6828ac38 WHIRLPOOL 76a28eb5d30e7a85ee85fc526a789f5df20ce4ce9c9ca3a86d50a9b0fa7c10b5a4755ec04870b898496e3aa58a842f2cecbb387d0aebdc15080680be904b795e
 MISC metadata.xml 354 SHA256 7a6a1533bbf4d0cd1f5a427099c2ea147007e708c4af3fcc988591cd73c2a471 SHA512 39e9096ff22fdc955661c912cd44c124a254920c8a9c82cffb20c8932af3dcb5cb7f41566a36014d0ea45e880901bcc0759dfe4247ff6eb5e4cd78591f66fc69 WHIRLPOOL a472aecadfb4d45b566efea327321e925141ef556c0ebe2b8a22d466e662df2dc942f52edeb7a16f00208806ee117556819351d801a2625a34cfe86ed1667a15
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJT/uknAAoJEDYO1FT4VRUU6rIP/1Lm3b3UnKtRlrRcqEVDUG9i
+e/v16HetAywTzWqpnNB2yvgnLdVFBSNqBW1YhKhCN13WSwsGk2PZT12EnDqQpXlY
+znfxJGql0kXXkvqbagxuFZ6bRj4KIUfQFefQv4/yDmVvgdVFx7TH/wOWTXvf3Oko
+1TgpbefOi/+BhlDo1YEAhigGHr9N8FtrO+jbrrVASMTtDT0uuponbZw8tIlY6L4j
+Vg4A6HSWieN/Eza+vJ9PFpTx2mot/RaBoMGQ2Gv11hK0DlY+L/UmotX1963a7IbQ
+/YloYP5cKL7SPC13McNChtiOA6z+Aphq/bYRZIvYJo29zfLZA3URpXN8KrNhuEBg
+adatm/tGID7p6LuGklEhTKxrkIJSPfYzb3+b3TEIlGMpSj8ep/iNUpgS4wnuX1fu
+xLMPOTh/yJKjfOLXm+61mJykzZ1OIcQpDGh2ygTzt2Mh87NPRGGMXHeepoQ+H35H
+L3eeFmwmCogweRTEIPkQ8ZfOyoxZ3AKcCgOyF56D5xvAAIrNyhAu9mGc5xatfHfj
+ilMRR/Fd1fyytmADGRTGU4G3yvRqw8LgUBhIfC/J+iaQd0o4g4vQRjWRE1fSQ8ry
+bKbS9mZzf85ZOGBlPOfGY4PuBZFbYDjM7Xuc0xar18SM1i93m8Yuk9TTlmx24X9c
+TFlJ0s9hjb1tTCj7w/b9
+=Qav1
+-----END PGP SIGNATURE-----
