@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/requests
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/requests/ChangeLog,v 1.68 2014/08/25 17:27:03 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/requests/ChangeLog,v 1.69 2014/08/28 08:29:47 naota Exp $
+
+  28 Aug 2014; Naohiro Aota <naota@gentoo.org> requests-2.3.0.ebuild:
+  Add ~x86-fbsd. #509628
 
   25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> requests-2.3.0.ebuild:
   Mark amd64 stable. Bug #513278.
