@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/ssl-fetch
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ssl-fetch/ChangeLog,v 1.20 2014/08/25 17:29:55 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ssl-fetch/ChangeLog,v 1.21 2014/08/28 08:32:37 naota Exp $
+
+  28 Aug 2014; Naohiro Aota <naota@gentoo.org> ssl-fetch-0.2.ebuild:
+  Add ~x86-fbsd. #509628
 
   25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> ssl-fetch-0.2.ebuild:
   Mark amd64 stable. Bug #513278.
