@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/ndg-httpsclient
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ndg-httpsclient/ChangeLog,v 1.14 2014/08/25 17:29:21 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ndg-httpsclient/ChangeLog,v 1.15 2014/08/28 08:25:59 naota Exp $
+
+  28 Aug 2014; Naohiro Aota <naota@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
+  Add ~x86-fbsd. #509628
 
   25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> ndg-httpsclient-0.3.2.ebuild:
   Mark amd64 stable. Bug #513278.
